--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,11 @@
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "func-names": "off",
     "object-shorthand": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "react/jsx-filename-extension": "off"
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
