(complete) redux-thunk integration & boilerplate setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "func-names": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
+    "no-underscore-dangle": "off",
     "react/jsx-filename-extension": "off"
   },
   "env": {
