--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express-http-proxy": "^1.6.0",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
-    "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
@@ -26,9 +25,12 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start:prod": "yarn build && node server.js",
