--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
   "rules": {
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
-    "no-console": "off",
+    "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "func-names": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
