--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-http-proxy": "^1.6.0",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
+    "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
