--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jquery": "^3.4.1",
+    "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
