--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.3.1",
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -13,6 +14,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jquery": "^3.4.1",
+    "express": "^4.17.1",
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
@@ -25,7 +27,7 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start:prod": "npm run build && node server.js",
+    "start:prod": "yarn build && node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
