--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "func-names": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "react/prefer-stateless-function": "off"
   },
   "env": {
     "browser": true,
