--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "jquery": "^3.4.1",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
