--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.3.1",
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.5.0",
@@ -12,8 +13,10 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "jquery": "^3.4.1",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
