--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
@@ -14,6 +15,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
