--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "no-unused-vars": "warn",
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "func-names": "off",
+    "no-underscore-dangle": "off",
     "object-shorthand": "off",
     "class-methods-use-this": "off",
     "no-underscore-dangle": "off",
