--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start:prod": "yarn build && node server.js",
     "start": "react-scripts start",
