--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.14.7",
     "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
