--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,9 @@
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
-    "func-names": "off",
-    "no-underscore-dangle": "off",
-    "object-shorthand": "off",
-    "class-methods-use-this": "off",
-    "no-underscore-dangle": "off",
-    "react/jsx-filename-extension": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/anchor-has-content": "off",
+    "jsx-a11y/control-has-associated-label": "off"
   },
   "env": {
     "browser": true,
